Modificacion de la tabla de Pedidos y agregado de la nueva tabla orders_products que sera la relacion entre ambos

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,7 +54,7 @@
     }
 
     /* TaskCard Icons */
-    .PedidoCard-icon{
+    .Card-icon{
         @apply
         relative flex items-center justify-center
         h-6 w-6 rounded-md
