--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,7 +66,7 @@
     .Card-icon{
         @apply
         relative flex items-center justify-center
-        h-6 w-6 rounded-md
+        p-0.5 rounded-md
         bg-details_3 text-white 
 
         hover:bg-indigo-600
