Autocompletado de titulo y total del pedido segun los items del mismo. Confirmacion de eliminacion y entregado en las tarjetas de pedidos

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,6 +44,7 @@
         bg-slate-200 rounded-md p-3.5
         shadow-container
         w-auto
+        overflow-hidden
         ;
     }
     .Tarjeta_field{
