--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,12 +108,19 @@
         @apply 
         absolute bottom-0 right-0
         transform translate-x-1 translate-y-1
-        /* absolute bottom-0
-        transform translate-y-1/2 */
         flex items-center justify-center
         bg-red-600
         text-white font-bold
         rounded-full h-6 w-6
+    }
+
+    .CantidadProductoMasVendido{
+        @apply
+        absolute bottom-0 right-0
+        transform translate-x-1.5 translate-y-1.5
+        flex items-center justify-center
+        text-5xl text-white font-bold
+        rounded-full h-20 w-20
     }
 
     .QuantityButtons{
@@ -151,6 +158,15 @@
         text-sm text-white
         bg-tertiary
         whitespace-pre-wrap
+        ;
+    }
+
+    .SliderArrows{
+        @apply
+        absolute top-1/2
+        transform -translate-y-1/2
+        bg-details_2 text-white
+        rounded-full p-2 focus:outline-none z-10
         ;
     }
 
