--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,28 +5,35 @@
 /* Custom Clases */
 @layer components{
 
-    /* NavBar Icons */
-    .NavBar-icon{
+    /* NavBar Items */
+    .NavBar-item{
         @apply
-        relative flex items-center justify-center
-        h-10 w-10 mt-2.5 mb-2.5 mx-auto rounded-2xl
-        bg-secondary text-white shadow-navBarIcon
-       
-        hover:scale-110
-        hover:bg-indigo-600
-        hover:shadow-navBarIconHover
+        flex items-center justify-start
+        p-0 pl-3 pr-3
+        mb-4
+        ;
+    }
+
+    /* NavBar Icons */
+    .NavBar-item-icon{
+        @apply
+        flex items-center justify-center
+        h-10 w-10 p-1 rounded-2xl
+        bg-navBar_Icon  shadow-navBarIcon
+
+        group-hover:drop-shadow-lg
+        group-hover:scale-110
+        group-hover:bg-indigo-600
+        group-hover:text-white
 
         transition-all duration-150 ease-linear
         ;
     }
 
-    /* NavBar tooltips */
+    /* NavBar Tooltips */
     .NavBar-tooltip{
         @apply
-        absolute w-auto p-2 m-2 min-w-max left-11
-        rounded-md shadow-md
-        text-white text-xs bg-blackBase
-        transition-all duration-100 scale-0 origin-left
+         p-1.5 ml-2
         ;
     }
 
